<resources>
    <string name="app_name">MireaPR_1</string>
    <string name="pepperoni">Pepe pizza</string>
    <string name="price">From %1$d$</string>
    <string name="pizza_description">Pizza with pepperoni, cheese and tomato sauce</string>
    <string name="make_an_order">Make an order</string>
    <string name="latte">Lat(t)e</string>
    <string name="latte_description">Latte with milk and caramel</string>
    <string name="latte_price">From 5$</string>
    <string name="your_order">Your order</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="pizza_rest">Pizza Rest</string>
    <string name="sushi_name">Cockoro</string>
    <string name="sushi_description">Sushi with tuna</string>
    <string name="sushi_price">From 50$</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="repeat_password">Repeat password</string>
    <string name="password">Password</string>
</resources>